chore(argo-cd): add changelog
Signed-off-by: Marco Lecheler <marco@task.media>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -19,4 +19,4 @@ dependencies:
     condition: redis-ha.enabled
 annotations:
   artifacthub.io/changes: |
-    - "[Changed]: Remove version labels to avoid invalid characters"
+    - "[Fixed]: Template existing value automountServiceAccountToken into repo-server"
