feat(argo-cd): expose tolerations and affinities to those who need it (#12)
* feat(argo-cd): expose tolerations and affinities to those who need it

* remove EWR1 from enum

* fix whitespace in helpers

--- a/charts/argo-cd/templates/argocd-notifications/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-notifications/deployment.yaml
@@ -93,5 +93,6 @@ spec:
         {{- with .Values.notifications.extraVolumes }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
-      {{include "coreweave.nodeAffinityAndTolerations" . | nindent 6 }}
+      {{include "coreweave.affinity" . | nindent 6 }}
+      {{include "coreweave.tolerations" . | nindent 6 }}
 {{- end }}
