feat(argo-cd): Add priorityClassName to notifications
Allow to set up a priorityClassName for notifications controller Pods

Signed-off-by: Paweł Kalemba <pawel.kalemba@getresponse.com>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -2277,6 +2277,9 @@ notifications:
   # -- Container Security Context
   containerSecurityContext: {}
 
+  # -- Priority class for the controller pods
+  priorityClassName: ""
+
   # -- Resource limits and requests for the controller
   resources: {}
     # limits:
