feat(argo-cd): Add username support for external redis
Signed-off-by: Eugene Lugovtsov <lug.zhenia@gmail.com>
Signed-off-by: Petr Drastil <petr.drastil@gmail.com>

--- a/charts/argo-cd/templates/argocd-configs/externalredis-secret.yaml
+++ b/charts/argo-cd/templates/argocd-configs/externalredis-secret.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.externalRedis.password (not .Values.externalRedis.existingSecret) }}
+{{- if and (or .Values.externalRedis.username .Values.externalRedis.password) (not .Values.externalRedis.existingSecret) }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -13,5 +13,10 @@ metadata:
   {{- end }}
 type: Opaque
 data:
-  redis-password: {{ .Values.externalRedis.password | b64enc }}
+  {{- with .Values.externalRedis.username }}
+  redis-username: {{ . | b64enc }}
+  {{- end }}
+  {{- with .Values.externalRedis.password }}
+  redis-password: {{ . | b64enc }}
+  {{- end }}
 {{- end }}
