--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 appVersion: v2.4.12
 description: A Helm chart for Argo CD, a declarative, GitOps continuous delivery tool for Kubernetes.
 name: argo-cd
-version: 5.5.0
+version: 5.5.1
 home: https://github.com/argoproj/argo-helm
 icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
 keywords:
@@ -19,6 +19,4 @@ dependencies:
     condition: redis-ha.enabled
 annotations:
   artifacthub.io/changes: |
-    - "[Added]: New configuration section `configs.params` for command line parameters"
-    - "[Deprecated]: Command line arguments in `args` sections"
-    - "[Deprecated]: Options `logFormat` and `logLevel` for core components"
+    - "[Added]: REDIS_USERNAME environment variable added automatically based on externalRedis.username"
