REDIS_USERNAME environment variable added automatically based on externalRedis.username
Signed-off-by: Eugene Lugovtsov <lug.zhenia@gmail.com>

--- a/charts/argo-cd/templates/argocd-application-controller/statefulset.yaml
+++ b/charts/argo-cd/templates/argocd-application-controller/statefulset.yaml
@@ -83,7 +83,7 @@ spec:
           {{- end }}
           - name: ARGOCD_CONTROLLER_REPLICAS
             value: {{ .Values.controller.replicas | quote }}
-          {{- include "argo-cd.redisPasswordEnv" . | nindent 10 }}
+          {{- include "argo-cd.externalRedisEnv" . | nindent 10 }}
         {{- with .Values.controller.envFrom }}
         envFrom:
           {{- toYaml . | nindent 10 }}
