--- a/charts/argo-cd/templates/argocd-configs/externalredis-secret.yaml
+++ b/charts/argo-cd/templates/argocd-configs/externalredis-secret.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.externalRedis.password (not .Values.externalRedis.existingSecret) }}
+{{- if and (or .Values.externalRedis.username .Values.externalRedis.password) (not .Values.externalRedis.existingSecret) }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -11,5 +11,10 @@ metadata:
   {{- end }}
 type: Opaque
 data:
+{{-if .Values.externalRedis.username }}
+  redis-username: {{ .Values.externalRedis.username | b64enc }}
+{{- end }}
+{{-if .Values.externalRedis.password }}
   redis-password: {{ .Values.externalRedis.password | b64enc }}
+{{- end }}
 {{- end }}
