--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -836,6 +836,8 @@ redis-ha:
 externalRedis:
   # -- External Redis server host
   host: ""
+  # -- External Redis username
+  username: ""
   # -- External Redis password
   password: ""
   # -- External Redis server port
