--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -842,8 +842,8 @@ externalRedis:
   password: ""
   # -- External Redis server port
   port: 6379
-  # -- The name of an existing secret with Redis credentials (must contain key `redis-password`).
-  # When it's set, the `externalRedis.password` parameter is ignored
+  # -- The name of an existing secret with Redis credentials (must contain keys `redis-username` and `redis-password`).
+  # When it's set, the `externalRedis.password` and `externalRedis.username` parameters are ignored
   existingSecret: ""
   # -- External Redis Secret annotations
   secretAnnotations: {}
