Allow setting the private key algorithm in the Certificate spec
Signed-off-by: Zach Leslie <xaque208@gmail.com>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -19,4 +19,4 @@ dependencies:
     condition: redis-ha.enabled
 annotations:
   artifacthub.io/changes: |
-    - "[Changed]: Update to app version 2.4.12"
+    - "[Added]: Add privateKey spec handling from CertificatePrivateKey"
