--- a/charts/argo-cd/templates/argocd-server/certificate.yaml
+++ b/charts/argo-cd/templates/argocd-server/certificate.yaml
@@ -31,6 +31,10 @@ spec:
     {{- end }}
     kind: {{ .Values.server.certificate.issuer.kind | quote }}
     name: {{ .Values.server.certificate.issuer.name | quote }}
+  privateKey:
+    {{- with .Values.server.certificate.privateKey.algorithm }}
+      algorithm: {{ . | quote }}
+    {{- end }}
   {{- with .Values.server.certificate.renewBefore }}
   renewBefore: {{ . | quote }}
   {{- end }}
