feat(argo-cd): add support for common labels in helm charts
Signed-off-by: Jean-Baptiste DONNETTE <jean-baptiste.donnette@payfit.com>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -8,6 +8,9 @@ nameOverride: argocd
 fullnameOverride: ""
 # -- Override the Kubernetes version, which is used to evaluate certain manifests
 kubeVersionOverride: ""
+# commonLabels -- Labels to apply to all resources
+commonLabels: {}
+# team_name: dev
 
 ## Custom resource configuration
 crds:
