--- a/charts/argo-cd/templates/dex/deployment.yaml
+++ b/charts/argo-cd/templates/dex/deployment.yaml
@@ -47,6 +47,10 @@ spec:
         volumeMounts:
         - mountPath: /shared
           name: static-files
+        {{- if .Values.dex.tls.secretName }}
+        - mountPath: /tls
+          name: argocd-dex-server-tls
+        {{- end }}
       {{- if .Values.dex.initContainers }}
       {{- toYaml .Values.dex.initContainers | nindent 6 }}
       {{- end }}
@@ -57,6 +61,9 @@ spec:
         command:
         - /shared/argocd-dex
         - rundex
+        {{- if eq .Values.dex.tls.enabled false }}
+        - --disable-tls
+        {{- end }}
         {{- with .Values.dex.extraArgs }}
         {{- . | toYaml | nindent 8 }}
         {{- end }}
@@ -143,6 +150,19 @@ spec:
       volumes:
       - emptyDir: {}
         name: tmp-dir
+      {{- if .Values.dex.tls.secretName }}
+      - name: dex-server-tls
+        secret:
+          secretName: {{ .Values.dex.tls.secretName }}
+          optional: true
+          items:
+          - key: tls.crt
+            path: tls.crt
+          - key: tls.key
+            path: tls.key
+          - key: ca.crt
+            path: ca.crt
+      {{- end }}
       {{- if .Values.dex.volumes }}
       {{- toYaml .Values.dex.volumes | nindent 6 }}
       {{- end }}
