--- a/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
@@ -92,6 +92,10 @@ data:
           {{- toYaml . | nindent 10 }}
         {{- end }}
       {{- end }}
+    {{- else }}
+      {{- if .Values.customArtifactRepository }}
+    artifactRepository: {{- toYaml .Values.customArtifactRepository | nindent 6 }}
+      {{- end }}
     {{- end }}
     {{- if .Values.controller.metricsConfig.enabled }}
     metricsConfig:
