chore(argo-workflows): upgrade version v3.4.0 (#1463)
* chore(argo-workflows): upgrade version v3.4.0
Signed-off-by: yu-croco <yu.croco@gmail.com>

* fix(argo-workflows): Remove unsupported attributes on metricsConfig and telemetryConfig, from workflow-controller-configmap
Signed-off-by: yu-croco <yu.croco@gmail.com>

* fix(argo-workflows): update CRDs
Signed-off-by: yu-croco <yu.croco@gmail.com>

* fix(argo-workflows): upgrade CRDs
Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -82,6 +82,12 @@ controller:
     path: /metrics
     # -- Port is the port where metrics are emitted
     port: 9090
+    # -- How often custom metrics are cleared from memory
+    metricsTTL: ""
+    # -- Flag that instructs prometheus to ignore metric emission errors.
+    ignoreErrors: false
+    # --  Flag that use a self-signed cert for TLS
+    secure: false
     # -- Container metrics port name
     portName: metrics
     # -- Service metrics port
@@ -142,6 +148,12 @@ controller:
     path: /telemetry
     # -- telemetry container port
     port: 8081
+    # -- How often custom metrics are cleared from memory
+    metricsTTL: ""
+    # -- Flag that instructs prometheus to ignore metric emission errors.
+    ignoreErrors: false
+    # --  Flag that use a self-signed cert for TLS
+    secure: false
     # -- telemetry service port
     servicePort: 8081
     # -- telemetry service port name
@@ -170,15 +182,6 @@ controller:
   workflowNamespaces:
     - default
 
-  # -- Specifies the container runtime interface to use (one of: `docker`, `kubelet`, `k8sapi`, `pns`, `emissary`)
-  ## Ref: https://argoproj.github.io/argo-workflows/workflow-executors/
-  containerRuntimeExecutor: emissary
-  # -- Specifies the executor to use. This has precedence over `controller.containerRuntimeExecutor`.
-  containerRuntimeExecutors: []
-    # - name: emissary
-    #   selector:
-    #     matchLabels:
-    #       workflows.argoproj.io/container-runtime-executor: emissary
   instanceID:
     # -- Configures the controller to filter workflow submissions
     # to only those which have a matching instanceID attribute.
